<resources>
    <string name="app_name">WorkoutLOG</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="your_username">Username</string>
    <string name="your_name">Name</string>
    <string name="e_mail">Email</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_surname">Surname</string>
    <string name="new_workout">New Workout</string>
    <string name="logout">Logout</string>
    <string name="cardio">Cardio</string>
    <string name="home">Home</string>
    <string name="new_workout_title">Save a new workout</string>
    <string name="statistics">Statistics</string>
    <string name="fitness">Fitness</string>
    <string name="history">History</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="save">Save</string>
    <string name="measurements">Measurements</string>
    <string name="setting">Setting</string>
    <string name="logo">Logo</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="your_experience">Your experience</string>
    <string name="weather">Weather</string>
    <string name="notes">Notes</string>
    <string name="exercise">Exercise</string>
    <string name="reps">Reps</string>
    <string name="kg">kg</string>
    <string name="sets">Sets</string>
    <string name="new_exercise">New</string>
    <string name="network_error">Network error!</string>
    <string name="login_successfully">Login successful!</string>
    <string name="login_wrong_password">Wrong password!</string>
    <string name="login_wrong_username">User not found!</string>
    <string name="service_error">Service error!</string>
    <string name="register_successfully">Register successful!</string>
    <string name="register_username_taken">Username already taken!</string>
    <string name="login_error">Login unsuccessful!</string>
    <string name="URL_register">http://10.0.2.2/WorkoutLOG/API/uporabniki/</string>
    <string name="URL_login">http://10.0.2.2/WorkoutLOG/API/login/</string>
    <string name="URL_settings">http://10.0.2.2/WorkoutLOG/API/nastavitve</string>
    <string name="URL_cardio">http://10.0.2.2/WorkoutLOG/API/teki</string>
    <string name="URL_fitness">http://10.0.2.2/WorkoutLOG/API/fitnes</string>
    <string name="URL_fitness_get">http://10.0.2.2/WorkoutLOG/API/fitnes_get</string>
    <string name="URL_cardio_get">http://10.0.2.2/WorkoutLOG/API/teki_get</string>
    <string name="empty_fields_error">Fill in empty fields!</string>
    <string name="fetch_successfully">Successful fetch</string>
    <string name="unexpected_error">Unexpected error!</string>
    <string name="saved_successfully">Successful save</string>
    <string name="select_date">Select date</string>
    <string name="register_error">Register unsuccessful!</string>
    <string name="height_cm">Height [cm]</string>
    <string name="weight_kg">Weight [kg]</string>
</resources>