<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/title"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/background"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_username"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/background"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_surname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_name"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/background"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_surname"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/background"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_email"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/background"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_re_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/re_type_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:padding="15dp"
        android:layout_below="@id/et_password"
        android:inputType="textPassword"
        android:background="@drawable/background"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/et_re_password"
        android:textColor="@android:color/white"
        android:text="@string/register"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:background="@drawable/button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

</RelativeLayout>