<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/history"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/date"
        android:layout_centerHorizontal="true"
        android:text="@string/select_date"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/date"
        android:inputType="date"
        android:background="@drawable/background"
        android:layout_below="@id/title"
        android:padding="15dp"
        android:importantForAutofill="no"
        tools:ignore="TextFields"/>

    <Button
        android:id="@+id/btn_cardio"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:layout_below="@id/date"
        android:textColor="@android:color/white"
        android:text="@string/cardio"/>

    <Button
        android:id="@+id/btn_fitness"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/date"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"
        android:text="@string/fitness"
        android:textColor="@android:color/white"/>

    <ListView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/btn_cardio"
        android:textSize="15sp"
        android:divider="@color/A"
        android:dividerHeight="0.5dp"
        android:importantForAutofill="no"/>

</RelativeLayout>