<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/measurements"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/gender"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/age"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/age"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerVertical="true"
        android:padding="15dp"
        android:inputType="numberDecimal"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/weight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/age"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/weight"
        android:padding="15dp"
        android:inputType="numberDecimal"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/height"
        android:background="@drawable/background"
        android:textSize="15sp"/>

</RelativeLayout>