<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/fitness"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/date"
        android:text="@string/date"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/date"
        android:inputType="date"
        android:background="@drawable/background"
        android:layout_below="@id/title"
        android:padding="15dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/exercise"
        android:text="@string/exercise"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/exercise"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/exercise"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/date"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/reps_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/reps"
        android:layout_alignStart="@id/reps"
        android:text="@string/reps"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/reps"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/reps"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/exercise"
        android:layout_alignParentEnd="true"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/kg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/kg"
        android:layout_above="@id/kg"
        android:text="@string/kg"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/kg"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/kg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:layout_below="@id/exercise"
        android:padding="15dp"
        android:inputType="numberDecimal"
        android:background="@drawable/background"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <ImageButton
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:background="@color/white"
        android:layout_below="@id/reps"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/sets_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sets"
        android:text="@string/sets"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/sets"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:padding="15dp"
        android:layout_below="@id/kg"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/sets"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:text="@string/save"/>

    <Button
        android:id="@+id/new_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/sets"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:text="@string/new_exercise"/>

</RelativeLayout>